// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useController().getState CacheProvider should eventually update 1`] = `
[
  CoolerArticle {
    "author": null,
    "content": "whatever",
    "id": 1,
    "tags": [
      "a",
      "best",
      "react",
    ],
    "title": "hi ho",
  },
]
`;

exports[`useController().getState ExternalDataProvider should eventually update 1`] = `
[
  CoolerArticle {
    "author": null,
    "content": "whatever",
    "id": 1,
    "tags": [
      "a",
      "best",
      "react",
    ],
    "title": "hi ho",
  },
]
`;

exports[`useController.fetch should dispatch an action that fetches a create 1`] = `
{
  "endpoint": [Function],
  "meta": {
    "args": [
      {
        "content": "hi",
      },
    ],
    "key": "POST http://test.com/article-cooler",
    "nm": false,
    "reject": [Function],
    "resolve": [Function],
  },
  "payload": [Function],
  "type": "rdc/fetch",
}
`;

exports[`useController.fetch should dispatch an action that fetches a full update 1`] = `
{
  "endpoint": [Function],
  "meta": {
    "args": [
      {
        "id": 1,
      },
      {
        "content": "changed",
      },
    ],
    "key": "PUT http://test.com/article-cooler/1",
    "nm": false,
    "reject": [Function],
    "resolve": [Function],
  },
  "payload": [Function],
  "type": "rdc/fetch",
}
`;

exports[`useController.fetch should dispatch an action that fetches a partial update 1`] = `
{
  "endpoint": [Function],
  "meta": {
    "args": [
      {
        "id": 1,
      },
      {
        "content": "changed",
      },
    ],
    "key": "PATCH http://test.com/article-cooler/1",
    "nm": false,
    "reject": [Function],
    "resolve": [Function],
  },
  "payload": [Function],
  "type": "rdc/fetch",
}
`;

exports[`useController.fetch should dispatch an action with updater in the meta if update shapes params are passed in 1`] = `
{
  "endpoint": [Function],
  "meta": {
    "args": [
      {
        "content": "hi",
      },
    ],
    "key": "POST http://test.com/article-cooler",
    "nm": false,
    "reject": [Function],
    "resolve": [Function],
  },
  "payload": [Function],
  "type": "rdc/fetch",
}
`;

exports[`useController.fetch should refresh get details 1`] = `
{
  "endpoint": [Function],
  "meta": {
    "args": [
      {
        "id": 1,
      },
    ],
    "key": "GET http://test.com/article-cooler/1",
    "nm": false,
    "reject": [Function],
    "resolve": [Function],
  },
  "payload": [Function],
  "type": "rdc/fetch",
}
`;
